gradle cleanup (#645)
* make simple_type_field_names an input of insertAutoGeneratedMappings bettererly
move EnigmaProfile to MappingsExtension

* replace MappingTask::getTaskByType with MappingsTask::getTaskNamed; tasks should not be retreived by type alone, adding a new task with the same type would break things
(most calls to MappingsTask::getTaskNamed will probably be eliminated when configuration is moved to MappingsPlugin)
the thisening
the abstractening
the finalening
the line wrappening

* the registerening
add missing get() to extractServerJar

* move downloadVersionsManifest and downloadWantedVersionManifest configuration to MappingsPlugin
refine downloadWantedVersionManifest inputs/outputs

* move downloadMinecraftJars, extractServerJar, and mergeJars configuration to MappingsExtension
refine their properties and dependencies
make ExtractServerJarTask's getServerBootstrapJar() an input instead of an output
make downloadMinecraftJars not finalizedBy extractServerJar as input/output handling is preferable

* move downloadMinecraftLibraries and openGlConstantUnpickGenerator configuration to MappingsPlugin
rework both tasks' inputs and outputs significantly
downloadMinecraftLibraries is still screwy though: it accesses and modifies project in its task action
add Task suffix to OpenGlConstantUnpickGenerator class
rename PropertyUtil -> ProviderUtil and add projectDirProviderOf

* AbstractDownloadMappingsTask -> DownloadMappingsTask, reworked its properties, and separated ExtractTinyMappingsTask
added ExtractTinyMappingsTasks for hashed and intermediary
removed DownloadIntermediaryMappingsTask class, it's just a DownloadMappingsTask now
added Constants.INTERMEDIARY_MAPPINGS_NAME, but haven't replaced duplicates yet
made some convensions in MappingsPlugin to use flatMap instead of lambdas
move MappingsExtension's getEnigmaProfileFile convension to MappingsPlugin

* move conventions for MergeTinyTask, MergeTinyV2Task, and MergeIn