@@ -9,6 +9,8 @@ import net.fabricmc.mappingio.MappingWriter;
 import net.fabricmc.mappingio.format.MappingFormat;
 import net.fabricmc.mappingio.tree.MappingTree;
 import net.fabricmc.mappingio.tree.MemoryMappingTree;
+
+import org.jetbrains.annotations.NotNull;
 import org.objectweb.asm.ClassReader;
 import org.objectweb.asm.tree.ClassNode;
 import quilt.internal.util.UnpickFile;
@@ -22,16 +24,17 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.Objects;
 
 public class TestUtil {
     private static MemoryMappingTree readTree(Path path, MappingFormat format) throws IOException {
-        MemoryMappingTree tree = new MemoryMappingTree();
+        final MemoryMappingTree tree = new MemoryMappingTree();
         MappingReader.read(path, format, tree);
         return tree;
     }
 
     private static void writeTree(Path path, MappingTree tree, MappingFormat format) throws IOException {
-        Path abs = path.toAbsolutePath();
+        final Path abs = path.toAbsolutePath();
         if (abs.getParent() != null && !Files.exists(abs.getParent())) {
             Files.createDirectories(abs.getParent());
         }
@@ -58,8 +61,8 @@ public class TestUtil {
     }
 
     public static UnpickFile readUnpickFile(Path path, Path jar) throws Exception {
-        HashMap<String, AbstractConstantGroup<?>> constantGroups = new HashMap<>();
-        TargetMethods.Builder methodsBuilder = TargetMethods.builder(getJarClassResolver(jar));
+        final HashMap<String, AbstractConstantGroup<?>> constantGroups = new HashMap<>();
+        final TargetMethods.Builder methodsBuilder = TargetMethods.builder(getJarClassResolver(jar));
 
         try (InputStream stream = Files.newInputStream(path)) {
             V2Parser.parse(stream, constantGroups, methodsBuilder);
@@ -69,33 +72,72 @@ public class TestUtil {
     }
 
     private static IClassResolver getJarClassResolver(Path jar) throws Exception {
-        ClassLoader loader = new URLClassLoader(new URL[]{new URL(null, jar.toUri().toString())});
-        return new IClassResolver() {
-            private final Map<String, ClassNode> cache = new HashMap<>();
+        try (URLClassLoader classLoader = new URLClassLoader(new URL[]{ jar.toUri().toURL() })) {
+            return new IClassResolver() {
+                private final Map<String, ClassNode> cache = new HashMap<>();
 
-            @Override
-            public ClassReader resolveClassReader(String binaryName) throws ClassResolutionException {
-                InputStream stream = loader.getResourceAsStream(binaryName.replace('.', '/') + ".class");
+                @Override
+                public ClassReader resolveClassReader(String binaryName) throws ClassResolutionException {
+                    final InputStream stream =
+                        classLoader.getResourceAsStream(binaryName.replace('.', '/') + ".class");
 
-                if (stream != null) {
-                    try {
-                        return new ClassReader(stream);
-                    } catch (IOException e) {
-                        throw new ClassResolutionException(e);
+                    if (stream != null) {
+                        try {
+                            return new ClassReader(stream);
+                        } catch (IOException e) {
+                            throw new ClassResolutionException(e);
+                        }
                     }
+
+                    throw new ClassResolutionException("Could not resolve class " + binaryName);
                 }
 
-                throw new ClassResolutionException("Could not resolve class " + binaryName);
-            }
+                @Override
+                public ClassNode resolveClassNode(String binaryName) throws ClassResolutionException {
+                    return this.cache.computeIfAbsent(binaryName, s -> {
+                        final ClassNode node = new ClassNode();
+                        this.resolveClassReader(s).accept(node, 0);
 
-            @Override
-            public ClassNode resolveClassNode(String binaryName) throws ClassResolutionException {
-                return cache.computeIfAbsent(binaryName, s -> {
-                    ClassNode node = new ClassNode();
-                    resolveClassReader(s).accept(node, 0);
-                    return node;
-                });
-            }
-        };
+                        return node;
+                    });
+                }
+            };
+        }
+    }
+
+    @NotNull
+    public static MappingTree.ClassMapping getClassOrThrow(MappingTree tree, String srcName) {
+        return Objects.requireNonNull(
+            tree.getClass(srcName),
+            "Missing class: " + srcName
+        );
+    }
+
+    @NotNull
+    public static MappingTree.ClassMapping getClassOrThrow(MappingTree tree, String srcName, int namespace) {
+        return Objects.requireNonNull(
+            tree.getClass(srcName, namespace),
+            "Missing class: " + srcName
+        );
+    }
+
+    @NotNull
+    public static MappingTree.FieldMapping getFieldOrThrow(
+        MappingTree tree, String srcClsName, String srcName, String srcDesc
+    ) {
+        return Objects.requireNonNull(
+            tree.getField(srcClsName, srcName, srcDesc),
+            "Missing field: %s %s %s".formatted(srcClsName, srcName, srcDesc)
+        );
+    }
+
+    @NotNull
+    public static MappingTree.MethodMapping getMethodOrThrow(
+        MappingTree tree, String srcClsName, String srcName, String srcDesc
+    ) {
+        return Objects.requireNonNull(
+            tree.getMethod(srcClsName, srcName, srcDesc),
+            "Missing method: %s %s %s".formatted(srcClsName, srcName, srcDesc)
+        );
     }
 }
